--- a/styles/main.css
+++ b/styles/main.css
@@ -6,27 +6,39 @@
     --mainLinkColor-light:#0da2b8;
     --mainBorderColor-light:rgb(218, 218, 218);
     --mainBgColor-light:rgb(249, 250,251);
+
+    --mainTextColor-dark:#fff;
+    --secondaryTextColor-dark:#adb0b1;
+    --mainLinkColor-dark:rgb(30, 190,214);
+    --mainBorderColor-dark:#2b3031;
+    --mainBgColor-dark:#131415;
+    
+    --mainTextColor:var(--mainTextColor-dark);
+    --secondaryTextColor:var(--secondaryTextColor-dark);
+    --mainLinkColor:var(--mainLinkColor-dark);
+    --mainBorderColor:var(--mainBorderColor-dark);
+    --mainBgColor:var(--mainBgColor-dark);
 }
 
 *{
     font-family: 'Readex Pro';
     line-height: 1.5em;
     box-sizing: border-box;
-    color: var(--mainTextColor-light);
+    color: var(--mainTextColor-dark);
 }
 
 body{
-    background-color: var(--mainBgColor-light);
+    background-color: var(--mainBgColor-dark);
 }
 
 p,span,li{
-    color: var(--secondaryTextColor-light);
+    color: var(--secondaryTextColor-dark);
     font-size: 1em;
 }
 
 a{
     text-decoration: none;
-    color: var(--mainLinkColor-light);
+    color: var(--mainLinkColor-dark);
     font-weight: 500;
 }
 
@@ -67,26 +79,26 @@ li{
 }
 
 #email{
-    color: var(--mainTextColor-light);
+    color: var(--mainTextColor-dark);
 }
 
 #socials--list{
     display: flex;
-    /*justify-content: space-between;*/
-    justify-content: flex-start;     
+    justify-content: space-between;
+    /*justify-content: flex-start;   */  
     column-gap: 1em;
     flex-wrap: wrap;
 }
 
 #socials--list a{
     font-size: 0.9em;
-    color: var(--mainTextColor-light);
+    color: var(--mainTextColor-dark);
     font-weight: 500;
     transition: 0.3s;
 }
 
 #socials--list a:hover{
-    color: var(--mainLinkColor-light);
+    color: var(--mainLinkColor-dark);
 }
 
 #qualifications--list{
@@ -101,36 +113,36 @@ li{
 }
 
 .card--techstack{
-    border: 1px solid var(--mainBorderColor-light);
+    border: 1px solid var(--mainBorderColor-dark);
     padding: 0.5em 1em;
     border-radius: 5px;
 }
 
 .card--work-history{
-    border-left: 1px solid var(--mainBorderColor-light);
+    border-left: 1px solid var(--mainBorderColor-dark);
     margin-top: 3em;
     margin-bottom: 3em;
     padding-left: 2em;
 }
 
 .line-break{
-    background-color: var(--mainBorderColor-light);
+    background-color: var(--mainBorderColor-dark);
     height: 1px;
 }
 
 .card--project{
     padding-top: 1em;
     padding-bottom: 1em;
-    border-top: 1px solid var(--mainBorderColor-light);
+    border-top: 1px solid var(--mainBorderColor-dark);
 }
 
 .card--project a{
-    color: var(--mainTextColor-light);
+    color: var(--mainTextColor-dark);
     transition: .3s;
 }
 
 .card--project:hover{
-    color: var(--mainLinkColor-light);
+    color: var(--mainLinkColor-dark);
 }
 
 
