--- a/styles/main.css
+++ b/styles/main.css
@@ -47,7 +47,7 @@ li{
 }
 
 #container--main{
-    max-width: 700px;
+    max-width: 900px;
     margin: 0 auto;
 }
 
@@ -75,6 +75,13 @@ li{
     border-radius: 30%;
     width: 200px;
     height: 200px;
+    object-fit: cover;
+}
+
+#icon-pic{
+    border-radius: 0%;
+    width: 300px;
+    height: 250px;
     object-fit: cover;
 }
 
